# image-lab

./: CMakeLists.txt
include/: Color.h  NetPBM.h  Program.h  Shader.h
src/: Color.cpp  Color.h  EnumFlags.hpp  Image.cpp  Image.h  Material.cpp  Material.h  NetBPM.cpp  NetBPM.h  NetPBM.cpp  Program.cpp  Program.h  Shader.cpp  Shader.h  Shell.Parser.Token.cpp  Shell.Parser.cpp  Shell.cpp  Shell.h  Uniforms.cpp  Uniforms.h  main.cpp
